# bencharena

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.MD  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.MD  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/web/: DESIGN.md  DESIGN_AUDIT.md  PRODUCT.md  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/credits/eligibility/: route.ts
apps/web/app/api/identity/parse/: route.ts
apps/web/app/api/passport/generate/: route.ts
apps/web/app/components/: HeroMotionSection.tsx  HeroOrbitalBackground.tsx
apps/web/components/: passport-demo.tsx
apps/web/components/landing/: FloatingArenaBackground.module.css  FloatingArenaBackground.tsx  Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  Hero.module.css  Hero.tsx  InfrastructureConsole.module.css  InfrastructureConsole.tsx  LeaderboardPreview.module.css  LeaderboardPreview.tsx  PlayerCardPreview.module.css  PlayerCardPreview.tsx  ProtocolLoop.module.css  ProtocolLoop.tsx  TrialFeedback.module.css  TrialFeedback.tsx  data.ts
apps/web/lib/protocol/: client.ts  fixtures.ts  server.test.ts  server.ts
apps/web/styles/: base.css  cyber-editorial.css  editor-grid.css  effects.css  layout.css  motion.css  tokens.css
crates/bencharena-protocol/src/: lib.rs
crates/bencharena-x402/: Cargo.toml
docs/: architecture.md  product-brief.md  roadmap.md  trust-model.md  web-architecture.md
programs/bencharena-receipts/: Cargo.toml
rust/: Cargo.toml
rust/crates/bencharena-protocol/: Cargo.toml
rust/crates/bencharena-protocol/examples/: local_protocol_demo.rs
rust/crates/bencharena-protocol/src/: compute.rs  lib.rs  loader.rs  passport.rs  security.rs  types.rs
rust/crates/bencharena-x402/src/: lib.rs
rust/programs/bencharena-receipts/src/: lib.rs
rust/samples/: identity.json  identity.md
