[workspace]
resolver = "2"
members = [
  "crates/bencharena-protocol",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Kenduk/bencharena"
rust-version = "1.96"
version = "0.1.0"

[workspace.dependencies]
bs58 = "0.5.1"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
