[workspace]
resolver = "2"
members = [
  "crates/bencharena-protocol",
  "crates/bencharena-x402",
  "programs/bencharena-receipts",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Vexera-Core/bencharena"
rust-version = "1.96"
version = "0.1.0"

[workspace.dependencies]
bs58 = "0.5.1"
ed25519-dalek = "2.2.0"
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
solana-program = "4.0.0"
spl-token-group-interface = "=0.7.1"
thiserror = "2.0.18"
x402-rs = { version = "0.12.5", default-features = false }
