[package]
name = "bencharena-receipts"
description = "Native Solana instruction foundation for BenchArena receipt anchoring."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program.workspace = true
